2005-02-11  Mark McLoughlin  <markmc@redhat.com>

	Add first cut of "stuff to ignore" list.

	* lib/dirmonitor.py:
	(DirectoryMonitor.set_directories_to_ignore),
	(DirectoryMonitor.set_files_to_ignore): impl.
	(DirectoryMonitor.__handle_gamin_event),
	(DirectoryMonitor.monitor_dir): ignore stuff.
	(run_unit_tests): test out new foo.
	
	* lib/config.py.in: add lists of files and directories
	to ignore.
	
	* lib/sources/filessource.py: hook up lists.

2005-02-11  Mark McLoughlin  <markmc@redhat.com>

	* lib/sources/paneldelegate.py: fix typo.

2005-02-11  Mark McLoughlin  <markmc@redhat.com>

	* lib/userprofile.py:
	(UserProfile.apply): call apply() on all delegates
	for each source too.
	
	* lib/sources/paneldelegate.py:
	(PanelDelegate.apply): add - it doesn't need to do anything, though.

2005-02-11  Mark McLoughlin  <markmc@redhat.com>

	* lib/sources/gconfsource.py:
	(recursive_unset): add - it turns out gconf_client_recursive_unset()
	isn't wrapped either.
	
	* lib/sources/paneldelegate.py:
	(PanelDelegate.__commit_removed_changed): make it work.
	(run_unit_tests): make sure committing is actually doing something.

2005-02-11  Mark McLoughlin  <markmc@redhat.com>

	* lib/config.py.in: add PANEL_KEY_BASE.
	
	* lib/sources/paneldelegate.py: use it, instead of hardcoding
	/apps/panel - older versions use /apps/panel/profiles/default.

2005-02-11  Mark McLoughlin  <markmc@redhat.com>

	* lib/sources/gconfsource.py:
	(associate_schema): gconf_engine_associate_schema() isn't wrapped, so
	use gconftool to do the job.
	(get_client_and_address_for_path): we want the address rather than
	engine now.
	
	* lib/sources/paneldelegate.py:
	(PanelDelegate.__handle_id_list_change): remove all the added/removed
	functions and do it generically here.
	(PanelDelegate.__copy_dir): implement.
	(PanelDelegate.__commit_removed_change),
	(PanelDelegate.__commit_added_change): use our cache of the id list
	rather than the schema default when committing the id list.