@@ -1,3 +1,11 @@
+2005-02-13  Seth Nickell  <seth@gnome.org>
+
+	* admin-tool/profilesdialog.py:
+
+	Throw up an explanatory (but not helpful...) error alert if the 
+	sabayon user account does not exist. We should really offer to
+	create it.
+
 2005-02-11  Mark McLoughlin  <markmc@redhat.com>
 
 	Add first cut of "stuff to ignore" list.
